--- a/.github/workflows/scp-action.yml
+++ b/.github/workflows/scp-action.yml
@@ -6,7 +6,7 @@ jobs:
   deploy:
 
     runs-on: ubuntu-latest
-
+    environment: main < -- here 
     steps:
     - uses: actions/checkout@master
     - name: Copiar el contenido del repositorio con scp
