--- a/.github/workflows/scp-action.yml
+++ b/.github/workflows/scp-action.yml
@@ -12,9 +12,9 @@ jobs:
       uses: appleboy/scp-action@master
       env:
         HOST: ${{ secrets.HOST }}
-        USERNAME: ${{ secrets.USER }}
+        USERNAME: ${{ secrets.USERNAME }}
         PORT: ${{ secrets.PORT }}
-        KEY: ${{ secrets.SSH_KEY }}
+        KEY: ${{ secrets.SSHKEY }}
       with:
         source: "README.md"
         target: "/home/iker/"
