--- a/.github/workflows/scp-action.yml
+++ b/.github/workflows/scp-action.yml
@@ -7,6 +7,7 @@ jobs:
 
     runs-on: ubuntu-latest
     steps:
+    - run: ls
     - uses: actions/checkout@master
     - name: Copiar el contenido del repositorio con scp
       uses: appleboy/scp-action@master
