--- a/.github/workflows/learning.github-acctions.yml
+++ b/.github/workflows/learning.github-acctions.yml
@@ -18,6 +18,7 @@ jobs:
             #- run: npm install -g conda python3
             #- run: bats -v
         #- run: echo "Hello, world!" >> myfile.txt
+      - run: ping -c 1 8.8.8.8
       - run: git config --global user.name "iortizdeluzu"
       - run: git config --global user.mail "iker.ortiz@dipc.org"
         #- run: git add -A
