--- a/.github/workflows/scp-action.yml
+++ b/.github/workflows/scp-action.yml
@@ -9,6 +9,7 @@ jobs:
     steps:
     - uses: actions/checkout@master
     - name: Copiar el contenido del repositorio con scp
+      uses: appleboy/scp-action@master
       env:
         HOST: ${{ secrets.HOST }}
         USERNAME: ${{ secrets.USERNAME }}
@@ -17,5 +18,3 @@ jobs:
       with:
         source: "README.md"
         target: "/home/iker/"
-        strip_components: 1
-      run: scp README.md ${USERNAME}@${HOST}
