--- a/.github/workflows/scp-action.yml
+++ b/.github/workflows/scp-action.yml
@@ -16,5 +16,5 @@ jobs:
         PORT: ${{ secrets.PORT }}
         KEY: ${{ secrets.SSHKEY }}
       with:
-        source: "README.md"
+        source: "./README.md"
         target: "/home/iker/"
