--- a/.github/workflows/scp-action.yml
+++ b/.github/workflows/scp-action.yml
@@ -8,6 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
+    - run: touch test.txt
     - name: Copiar el contenido del repositorio con scp
       uses: appleboy/scp-action@master
       env:
