--- a/.github/workflows/scp-action.yml
+++ b/.github/workflows/scp-action.yml
@@ -9,6 +9,7 @@ jobs:
     steps:
     - uses: actions/checkout@master
     - run: touch test.txt
+    - run: ls
     - name: Copiar el contenido del repositorio con scp
       uses: appleboy/scp-action@master
       env:
