--- a/.github/workflows/scp-action.yml
+++ b/.github/workflows/scp-action.yml
@@ -18,5 +18,5 @@ jobs:
         PORT: ${{ secrets.PORT }}
         KEY: ${{ secrets.SSHKEY }}
       with:
-        source: "./README.md"
+        source: "./test.txt"
         target: "/home/iker/"
