--- a/.github/workflows/scp-action.yml
+++ b/.github/workflows/scp-action.yml
@@ -20,3 +20,19 @@ jobs:
         KEY: ${{ secrets.SSHKEY }}
         source: "./test.txt"
         target: "/home/iker/"
+  remote-ssh-command:
+    name: remote ssh command
+    jobs:
+
+    build:
+    name: Build
+    runs-on: ubuntu-latest
+    steps:
+    - name: executing remote ssh commands using password
+      uses: appleboy/ssh-action@v0.1.10
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USERNAME }}
+        password: ${{ secrets.PASSWORD }}
+        port: ${{ secrets.PORT }}
+        script: whoami
