--- a/.github/workflows/scp-action.yml
+++ b/.github/workflows/scp-action.yml
@@ -26,7 +26,17 @@ jobs:
           virtualenv mkdocs 
           source mkdocs/bin/activate
           pip install -r requirements.txt
-      
+
+      - name: executing remote ssh commands using password
+        uses: appleboy/ssh-action@v1.0.3
+          with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          password: ${{ secrets.SSHPASS }}
+          script: whoami
+
+
+
       - name: Build documentation
         run: |
           ./mkdocs/bin/mkdocs build
