--- a/.github/workflows/scp-action.yml
+++ b/.github/workflows/scp-action.yml
@@ -33,7 +33,7 @@ jobs:
           host: ${{ secrets.HOSTATLAS }}
           username: ${{ secrets.USERNAMEATLAS }}
           password: ${{ secrets.SSHPASSATLAS }}
-          script: echo "ml av siesta"
+          script: ml av siesta
 
       - name: Build documentation
         run: |
