--- a/.github/workflows/scp-action.yml
+++ b/.github/workflows/scp-action.yml
@@ -33,7 +33,7 @@ jobs:
           host: ${{ secrets.HOSTATLAS }}
           username: ${{ secrets.USERNAMEATLAS }}
           password: ${{ secrets.SSHPASSATLAS }}
-          script: ml av siesta >> README.md
+          script: ml av siesta > /dipc/iortiz/README.md
 
       - name: Build documentation
         run: |
