Adding remote commands

--- a/.github/workflows/scp-action.yml
+++ b/.github/workflows/scp-action.yml
@@ -34,14 +34,12 @@ jobs:
           #         username: ${{ secrets.USERNAMEATLAS }}
           #         password: ${{ secrets.SSHPASSATLAS }}
           #         script: ml av siesta > /dipc/iortiz/README.md
+      - name: Copy SSH key to remote server
+          run: sshpass -p ${{ secrets.SSHPASSATLAS }} ssh-copy-id -o StrictHostKeyChecking=no ${{ secrets.USERNAMEATLAS }}@${{ secrets.HOSTATLAS }}
 
-      - name: Take software version
-        with:
-          host: ${{ secrets.HOSTATLAS }}
-          username: ${{ secrets.USERNAMEATLAS }}
-          password: ${{ secrets.SSHPASSATLAS }}
-        run: |
-          sshpass -p $SSHPASSATLAS ssh-copy-id -o StrictHostKeyChecking=no $USERATLAS@$HOSTATLAS "ml av siesta"
+      - name: Run command on remote server
+          run: ssh ${{ secrets.USERNAMEATLAS }}@${{ secrets.HOSTATLAS }} "ml av siesta"
+
             
       - name: Build documentation
         run: |
