--- a/.github/workflows/scp-action.yml
+++ b/.github/workflows/scp-action.yml
@@ -35,13 +35,9 @@ jobs:
           #         password: ${{ secrets.SSHPASSATLAS }}
           #         script: ml av siesta > /dipc/iortiz/README.md
       - name: Copy SSH key to remote server
-        uses: actions/setup-node@v3
-        with:
-          host: ${{ secrets.HOSTATLAS }}
-          username: ${{ secrets.USERNAMEATLAS }}
-          password: ${{ secrets.SSHPASSATLAS }}i
-        run: ssh ${{ secrets.USERNAMEATLAS }}@${{ secrets.HOSTATLAS }} "ml av siesta"
-            # run: sshpass -p ${{ secrets.SSHPASSATLAS }} ssh-copy-id -o StrictHostKeyChecking=no ${{ secrets.USERNAMEATLAS }}@${{ secrets.HOSTATLAS }}
+        run: |
+          sshpass -p ${{ secrets.SSHPASSATLAS }} ssh-copy-id -o StrictHostKeyChecking=no ${{ secrets.USERNAMEATLAS }}@${{ secrets.HOSTATLAS }}
+          ssh ${{ secrets.USERNAMEATLAS }}@${{ secrets.HOSTATLAS }} "ml av siesta"
 
             #      - name: Run command on remote server
             #          run: ssh ${{ secrets.USERNAMEATLAS }}@${{ secrets.HOSTATLAS }} "ml av siesta"
